points -> summary, some fixes

--- a/frontend/translations/pages/en.json
+++ b/frontend/translations/pages/en.json
@@ -16,6 +16,7 @@
     "/[lng]/study-modules/new": "New study module",
     "/[lng]/users/[id]": "User - {{title}}",
     "/[lng]/users/[id]/completions": "Completions - {{title}}",
+    "/[lng]/users/[id]/summary": "Summary - {{title}}",
     "/[lng]/users/search": "Search users",
     "/[lng]/users/search/[text]": "Search users - [[text]]",
     "/[lng]/users": "Users",
@@ -45,6 +46,7 @@
     "/[lng]/study-modules/[slug]/edit": "Edit",
     "/[lng]/users/[id]": "User", 
     "/[lng]/users/[id]/completions": "Completions",
+    "/[lng]/users/[id]/summary": "Summary",
     "/[lng]/register-completion/[slug]": "Register completion",
     "/[lng]/study-modules/new": "New",
     "/[lng]/users/search": "Search",
