--- a/frontend/translations/pages/fi.json
+++ b/frontend/translations/pages/fi.json
@@ -16,6 +16,7 @@
     "/[lng]/study-modules/new": "Uusi opintokokonaisuus",
     "/[lng]/users/[id]": "Käyttäjä - {{title}}",
     "/[lng]/users/[id]/completions": "Suoritukset - {{title}}",
+    "/[lng]/users/[id]/summary": "Yhteenveto - {{title}}",
     "/[lng]/users/search": "Hae käyttäjiä",
     "/[lng]/users/search/[text]": "Hae käyttäjiä - [[text]]",
     "/[lng]/users": "Käyttäjät",
@@ -46,6 +47,7 @@
     "/[lng]/study-modules/new": "Uusi",
     "/[lng]/users/[id]": "Käyttäjä",
     "/[lng]/users/[id]/completions": "Suoritukset",
+    "/[lng]/users/[id]/summary": "Yhteenveto",
     "/[lng]/users/search": "Hae",
     "/[lng]/register-completion/[slug]": "Rekisteröi suoritus",
     "/[lng]/email-templates/[id]": "Muokkaa",
