--- a/frontend/translations/users/fi.json
+++ b/frontend/translations/users/fi.json
@@ -7,6 +7,7 @@
   "userLastName": "Sukunimi",
   "userStudentNumber": "Opiskelijanumero",
   "completions": "Suoritukset",
+  "summary": "Yhteenveto",
   "rowsPerPage": "Rivejä sivulla:",
   "displayedRowsOf": "/",
   "nextPage": "Seuraava sivu",
