--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -16,12 +16,23 @@
     "tabCompletions": "Completions",
     "tabSettings": "Settings",
     "registerCompletion": "Register Completion",
-    "completionTier": "completion tier: ",
+    "completionTier": "completion tier:",
     "completionTier-1": "beginner",
     "completionTier-2": "intermediate",
     "completionTier-3": "advanced",
     "organization": "Organization: ",
     "REJECTED": "Rejected",
-    "GIVE_PEER_REVIEW": "You have given too few peer reviews",
-    "PENDING_PEER_REVIEW": "Your answer is waiting for peer reviews"
+    "GIVE_PEER_REVIEW": "Too few peer reviews given",
+    "PENDING_PEER_REVIEW": "Waiting for peer reviews",
+    "exercise": "Exercise",
+    "points": "Points",
+    "completed": "Completed",
+    "attempted": "Attempted",
+    "requiredActions": "Required actions",
+    "more": "More...",
+    "yes": "yes",
+    "no": "no",
+    "progress": "Progress",
+    "totalProgress": "Total progress",
+    "exercisesCompleted": "Exercises completed"
 }
