--- a/frontend/translations/courses/en.json
+++ b/frontend/translations/courses/en.json
@@ -107,5 +107,8 @@
   "helpExerciseCompletionsNeeded": "How many exercise completions are needed to pass the course?",
   "helpPointsNeeded": "How many points are needed to pass the course?",
   "helpAutomaticCompletions": "Does the course have automatic completions?",
-  "helpCourseAutomaticCompletionsEligibleForEcts": "If the course has automatic completions, are they eligible for ECTS?"
+  "helpCourseAutomaticCompletionsEligibleForEcts": "If the course has automatic completions, are they eligible for ECTS?",
+  "started": "Started",
+  "completed": "Completed",
+  "atLeastOneExercise": "At least one exercise submitted"
 }
