added breadcrumbs to rest of pages

--- a/frontend/translations/breadcrumbs/fi.json
+++ b/frontend/translations/breadcrumbs/fi.json
@@ -4,17 +4,19 @@
   "courseCompletions": "Suoritukset",
   "coursePoints": "Pisteet",
   "courseNew": "Uusi",
+  "courseManualCompletions": "Manual completions",
   "studyModules": "Opintokokonaisuudet",
   "studyModuleEdit": "Muokkaa",
   "studyModuleNew": "Uusi",
   "profile": "Oma profiili",
-  "profileCompletion": "Omat suoritukset",
+  "profileCompletions": "Omat suoritukset",
   "profilePoints": "Omat pisteet",
   "user": "Käyttäjä",
   "users": "Käyttäjät",
   "userCompletions": "Suoritukset",
   "userSummary": "Yhteenveto",
-  "userSearch": "Etsi",
+  "userSearch": "Haku",
+  "userSearchResults": "Tulokset",
   "emailTemplates": "Email-mallit",
   "emailTemplateEdit": "Muokkaa",
   "researchConsent": "Osallistuminen tutkimukseen",
@@ -24,5 +26,6 @@
   "teachers": "Opettajille",
   "signIn": "Kirjaudu",
   "signUp": "Rekisteröidy",
+  "installation": "Asennus",
   "home": "Etusivu"
 }
