--- a/frontend/translations/breadcrumbs/en.json
+++ b/frontend/translations/breadcrumbs/en.json
@@ -4,17 +4,19 @@
   "courseCompletions": "Completions",
   "coursePoints": "Points",
   "courseNew": "New",
+  "courseManualCompletions": "Manual completions",
   "studyModules": "Study modules",
   "studyModuleEdit": "Edit",
   "studyModuleNew": "New",
   "profile": "My profile",
-  "profileCompletion": "My completions",
+  "profileCompletions": "My completions",
   "profilePoints": "My points",
   "user": "User",
   "users": "Users",
   "userCompletions": "Completions",
   "userSummary": "Summary",
   "userSearch": "Search",
+  "userSearchResults": "Results",
   "emailTemplates": "Email templates",
   "emailTemplateEdit": "Edit email template",
   "researchConsent": "Research consent",
@@ -24,5 +26,6 @@
   "teachers": "For teachers",
   "signIn": "Sign in",
   "signUp": "Sign up",
-  "home": "Home"
+  "home": "Home",
+  "installation": "Installation"
 }
