--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -108,5 +108,13 @@
   "helpExerciseCompletionsNeeded": "Kuinka monta tehtävää pitää olla suoritettuna läpipääsyyn?",
   "helpPointsNeeded": "Kuinka paljon pisteitä tarvitaan läpipääsyyn?",
   "helpAutomaticCompletions": "Merkitäänkö kurssisuoritus automaattisesti?",
-  "helpCourseAutomaticCompletionsEligibleForEcts": "Jos automaattiset kurssisuoritukset ovat päällä, myönnetäänkö myös opintopisteet automaattisesti?"
+  "helpCourseAutomaticCompletionsEligibleForEcts": "Jos automaattiset kurssisuoritukset ovat päällä, myönnetäänkö myös opintopisteet automaattisesti?",
+  "started": "Aloitettu",
+  "completed": "Suoritettu",
+  "atLeastOneExercise": "Ainakin yksi tehtävä palautettu",
+  "updated": "Päivitetty",
+  "cumulative_started": "Aloitettu, kumulatiivinen",
+  "cumulative_completed": "Suoritettu, kumulatiivinen",
+  "cumulative_at_least_one_exercise": "Ainakin yksi tehtävä palautettu, kumulatiivinen"
+
 }
