--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -113,8 +113,8 @@
   "completed": "Suoritettu",
   "atLeastOneExercise": "Ainakin yksi tehtävä palautettu",
   "updated": "Päivitetty",
-  "cumulative_started": "Aloitettu, kumulatiivinen",
-  "cumulative_completed": "Suoritettu, kumulatiivinen",
-  "cumulative_at_least_one_exercise": "Ainakin yksi tehtävä palautettu, kumulatiivinen"
+  "started_cumulative": "Aloitettu, kumulatiivinen",
+  "completed_cumulative": "Suoritettu, kumulatiivinen",
+  "at_least_one_exercise_cumulative": "Ainakin yksi tehtävä palautettu, kumulatiivinen"
 
 }
