--- a/frontend/static/md_pages/tmc-cli_installation_macOS_en.mdx
+++ b/frontend/static/md_pages/tmc-cli_installation_macOS_en.mdx
@@ -5,10 +5,9 @@ import {ContentBox, SectionBox} from "/pages/[lng]/installation/netbeans"
 ## Installing to Linux
 ---
 ### Contents
-1. [Install using Flatpak](#using-flatpak)
-2. [Install using the install script](#using-script)
-3. [Install manually](#manual-installation)
-4. [Getting started](#getting-started)
+1. [Install using the install script](#using-script)
+2. [Install manually](#manual-installation)
+3. [Getting started](#getting-started)
 ---
 
 </ContentBox>
@@ -17,35 +16,21 @@ import {ContentBox, SectionBox} from "/pages/[lng]/installation/netbeans"
 
 Follow the instructions below to install the Test My Code client
 
-<SectionBox>
-
-### Install using Flatpak<a name="using-flatpak"></a>
-
-> `flatpak install flathub fi.mooc.tmc.tmc-cli-rust`
-
-Create alias after installation for ease of use with:
-
-> `echo "alias tmc=\"flatpak run fi.mooc.tmc.tmc-cli-rust\"" >> ~/.bashrc`
-
-After restarting the terminal, this should work:
-
-> `tmc --help`
-
-</SectionBox>
+Note: this software has not been tested on a macOS device (yet), so some functionalities might not work.
 
 <SectionBox>
 
 ### Install using the install script<a name="using-script"></a>
 
-`cd` into the directory where you want to download tmc-cli and run the following command:
+`cd` into the directory where you want to download tmc-cli-rust and run the following command:
 
-64 bit Linux:
+64 bit MacOS:
 
-> `curl -0 https://raw.githubusercontent.com/rage/tmc-cli-rust/dev/scripts/install.sh | bash -s x86_64 linux`
+> `curl -0 https://raw.githubusercontent.com/rage/tmc-cli-rust/dev/scripts/install.sh | bash -s x86_64 mac`
         
-32 bit Linux:
+32 bit MacOS:
     
-> `curl -0 https://raw.githubusercontent.com/rage/tmc-cli-rust/dev/scripts/install.sh | bash -s i686 linux`
+> `curl -0 https://raw.githubusercontent.com/rage/tmc-cli-rust/dev/scripts/install.sh | bash -s i686 mac`
 
 </SectionBox>
 
