added tier completions for open uni

--- a/frontend/translations/courses/en.json
+++ b/frontend/translations/courses/en.json
@@ -27,7 +27,7 @@
   "courseHasCertificate": "Has certificate",
   "courseHasVisibleUserCount": "Has visible user count",
   "courseModules": "Study modules",
-  "coursePhoto": "Photo", 
+  "coursePhoto": "Photo",
   "courseNewPhoto": "Upload new photo",
   "courseTranslations": "Course translations",
   "confirmationAreYouSure": "Are you sure?",
@@ -36,6 +36,7 @@
   "confirmationNo": "No",
   "courseLanguage": "Language",
   "courseDescription": "Description",
+  "courseInstructions": "Instructions",
   "courseLink": "Link",
   "courseOpenCode": "Open university course code",
   "courseOpenLink": "Open university course link",
@@ -57,7 +58,7 @@
   "courseFinnish": "Finnish",
   "courseEnglish": "English",
   "courseSwedish": "Swedish",
-  "courseBoth":"Both",
+  "courseBoth": "Both",
   "validationRequired": "required",
   "validationNoSpacesSlashes": "can't include spaces or slashes",
   "validationSlugInUse": "slug is already in use",
@@ -74,15 +75,15 @@
   "courseStartDateRequired": "You must provide start date",
   "courseStartDateLaterThanEndDate": "Start date must be same or earlier than end date",
   "courseTeacherNameRequired": "You must provide the name of the teacher in charge of the course",
-  "courseTeacherEmailRequired":"You must provide the e-mail of the teacher in charge of the course",
+  "courseTeacherEmailRequired": "You must provide the e-mail of the teacher in charge of the course",
   "courseEmailInvalid": "Make sure the given e-mail address is correct",
   "courseDateHelper": "Date must be form dd/mm/yyyy",
   "courseDatePlaceholder": "yyyy-mm-dd",
   "courseStartDate": "Course start date",
   "courseEndDate": "Course end date",
   "courseTeacherInChargeName": "Teacher in charge - name",
-  "courseTeacherInChargeEmail":"Teacher in charge - email",
-  "courseSupportEmail":"Course support email",
+  "courseTeacherInChargeEmail": "Teacher in charge - email",
+  "courseSupportEmail": "Course support email",
   "courseVariantsTitle": "Course variants",
   "courseUserCourseSettingsVisibility": "User count visibility",
   "courseAliasesTitle": "Course aliases",
