--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -36,6 +36,7 @@
   "confirmationNo": "Ei",
   "courseLanguage": "Kieli",
   "courseDescription": "Kuvaus",
+  "courseInstructions": "Instructions",
   "courseLink": "Linkki",
   "courseOpenCode": "Avoimen yliopiston kurssikoodi",
   "courseOpenLink": "Avoimen yliopiston kurssilinkki",
@@ -57,7 +58,7 @@
   "courseFinnish": "Suomi",
   "courseEnglish": "Englanti",
   "courseSwedish": "Ruotsi",
-  "courseBoth":"Molemmat",
+  "courseBoth": "Molemmat",
   "validationRequired": "vaaditaan",
   "validationNoSpacesSlashes": "ei saa sisältää välilyöntejä tai kauttaviivoja",
   "validationSlugInUse": "tunnus on jo käytössä",
@@ -74,15 +75,15 @@
   "courseStartDateRequired": "Kurssilla on oltava alkamispäivämäärä",
   "courseStartDateLaterThanEndDate": "Alkamispäivämäärän tulee olla loppupäivämäärää aiemmin",
   "courseTeacherNameRequired": "Anna kurssin vastuuhenkilön nimi",
-  "courseTeacherEmailRequired":"Anna kurssin vastuuhenkilön sähköpostiosoite",
+  "courseTeacherEmailRequired": "Anna kurssin vastuuhenkilön sähköpostiosoite",
   "courseEmailInvalid": "Varmista että annettu sähköpostiosoite on oikein",
   "courseDateHelper": "Päivämäärän tulee olla muotoa pp/kk/vvvv",
   "courseDatePlaceholder": "vvvv-kk-pp",
   "courseStartDate": "Kurssin alkamispäivämäärä",
   "courseEndDate": "Kurssin loppumispäivämäärä",
   "courseTeacherInChargeName": "Vastuuhenkilön nimi",
-  "courseTeacherInChargeEmail":"Vastuuhenkilön sähköpostiosoite",
-  "courseSupportEmail":"Kurssin tukisähköpostiosoite",
+  "courseTeacherInChargeEmail": "Vastuuhenkilön sähköpostiosoite",
+  "courseSupportEmail": "Kurssin tukisähköpostiosoite",
   "courseVariantsTitle": "Kurssivariantit",
   "courseUserCourseSettingsVisibility": "Käyttäjämäärä näkyvillä",
   "courseAliasesTitle": "Kurssialiakset",
@@ -108,5 +109,4 @@
   "helpPointsNeeded": "Kuinka paljon pisteitä tarvitaan läpipääsyyn?",
   "helpAutomaticCompletions": "Merkitäänkö kurssisuoritus automaattisesti?",
   "helpCourseAutomaticCompletionsEligibleForEcts": "Jos automaattiset kurssisuoritukset ovat päällä, myönnetäänkö myös opintopisteet automaattisesti?"
-
 }
