separate pages for success/failure; redirects

--- a/frontend/translations/breadcrumbs/en.json
+++ b/frontend/translations/breadcrumbs/en.json
@@ -27,5 +27,8 @@
   "signIn": "Sign in",
   "signUp": "Sign up",
   "home": "Home",
-  "installation": "Installation"
+  "installation": "Installation",
+  "profileConnection": "Connecting accounts",
+  "profileConnectionFailure": "Failure",
+  "profileConnectionSuccess": "Success"
 }
