--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -15,7 +15,7 @@
     "tabPoints": "Points",
     "tabCompletions": "Completions",
     "tabSettings": "Settings",
-    "registerCompletion": "Register Completion",
+    "registerCompletion": "Register completion",
     "completionTier": "completion tier:",
     "completionTier-1": "beginner",
     "completionTier-2": "intermediate",
@@ -42,5 +42,12 @@
     "connectSuccessMessage": "Your account was connected successfully.",
     "connectFailureMessage": "There was an error connecting your account. Please try again later.",
     "disconnectSuccessMessage": "Your account was disconnected successfully.",
-    "disconnectFailureMessage": "There was an error disconnecting your account. Please try again later."
+    "disconnectFailureMessage": "There was an error disconnecting your account. Please try again later.",
+    "connectTitle": "Connecting your MOOC.fi profile to learning institution accounts",
+    "connectText": "On this page, you can connect your MOOC.fi account to any institution accounts you might have, or disconnect your accounts.",
+    "connectExisting": "Existing connections",
+    "disconnectWarningTitle": "About to disconnect your account",
+    "disconnectWarningDescription": "Are you sure you want to disconnect your {{organization}} account?",
+    "disconnectWarningConfirmationText": "Yes",
+    "disconnectWarningCancellationText": "No"
 }
