add messages; refactor handlers

--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -49,5 +49,6 @@
     "disconnectWarningTitle": "About to disconnect your account",
     "disconnectWarningDescription": "Are you sure you want to disconnect your {{organization}} account?",
     "disconnectWarningConfirmationText": "Yes",
-    "disconnectWarningCancellationText": "No"
+    "disconnectWarningCancellationText": "No",
+    "myProfile": "My profile"
 }
