--- a/frontend/translations/sign-up/fi.json
+++ b/frontend/translations/sign-up/fi.json
@@ -21,5 +21,11 @@
     "required": "Vaaditaan",
     "signupHYHaka": "Rekisteröityminen",
     "formInfoHYHakaRegister": "Tarkista, että allaolevat tiedot ovat oikein.",
-    "formInfoNoTMC": "Näyttää siltä, ettei sinulla ole TMC-tiliä sähköpostiosoitteella <b>{{email}}</b>. Anna salasana ja varmista se, ja luomme tilin sinulle automaattisesti."
+    "formInfoNoTMC": "Näyttää siltä, ettei sinulla ole TMC-tiliä sähköpostiosoitteella <b>{{email}}</b>. Anna salasana ja varmista se, ja luomme tilin sinulle automaattisesti.",
+    "errorTitle": "Virhe",
+    "verify-user": "Käyttäjä sähköpostiosoitteella <b>{{email}}</b> on jo olemassa, mutta ei ole kytketty tähän organisaatioon. Ole hyvä ja kirjaudu MOOC.fi-käyttäjätunnuksillasi ja yhdistä tili organisaatiotiliisi.",
+    "token-issue": "Loimme sinulle käyttäjätilin, mutta sisäänkirjautumisessa oli ongelmia. Yritä myöhemmin uudelleen.",
+    "already-registered": "Käyttäjä sähköpostiosoitteella <b>{{email}}</b> on jo olemassa, ja se on kytketty tähän organisaatioon. Ole hyvä ja kirjaudu sisään.",
+    "generic-error": "Rekisteröinnissä tapahtui virhe. Yritä myöhemmin uudelleen."
+
 }
