profile tabs in url

--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -10,7 +10,9 @@
     "seePoints": "See all points here",
     "researchOkAnswer": "Thanks for your answer!",
     "researchError": "There was an error updating your answer. Try again later.",
-    "researchNotification": "Do you want to participate in research? Answer on the <b>Settings</b> tab.",
+    "researchNotification1": "Do you want to participate in research? Answer on the ",
+    "researchNotificationLink": "Settings",
+    "researchNotification2": "tab.",
     "tabAriaLabel": "tab to select if viewing points, completions or settings",
     "tabPoints": "Points",
     "tabCompletions": "Completions",
