--- a/frontend/translations/profile/fi.json
+++ b/frontend/translations/profile/fi.json
@@ -10,7 +10,9 @@
     "seePoints":"Katso kaikki kurssipisteesi täältä",
     "researchOkAnswer": "Kiitos vastauksestasi!",
     "researchError": "Vastaustasi ei voitu tallentaa. Yritä myöhemmin uudelleen.",
-    "researchNotification": "Haluatko osallistua tutkimukseen? Vastaa Asetukset-välilehdellä.",
+    "researchNotification1": "Haluatko osallistua tutkimukseen? Vastaa ",
+    "researchNotificationLink": "Asetukset",
+    "researchNotification2": "-välilehdellä.",
     "tabAriaLabel": "välilehti pisteille, suorituksille tai asetuksille",
     "tabPoints": "Pisteet",
     "tabCompletions": "Suoritukset",
